<resources>

    <string name="app_name">GroupProject</string>
    <string name="button1">Sunrise &amp; Sunset lookup \nBy: Zimeng Wang</string>
    <string name="button2">Recipe Search \nBy: Wenxin Li</string>
    <string name="button3">Dictionary API \nBy: Mengying Liu</string>
    <string name="button4">Deezer song search API \nBy: Yashan Wasson</string>
    <string name="hello_message">Welcome to the final project</string>

    <!-- Dictionary -->
    <string name="translate_button">Translate</string>
    <string name="hint">Enter the word.</string>
    <string name="second">Saved Vocabulary</string>
    <string name="third">Help</string>
    <string name="save_button">Save</string>
    <string name="error_message">No result found, please try another word.</string>
    <string name="API_name">Dictionary API</string>
    <string name="instruction_title">Instruction for Dictionary API</string>
    <string name="instruction_body">"1, Under \"New Search\" tab, please enter a word to start translating. If no result shown, Please enter a new word.\n\n2, You can press SAVE button to save a term to your own vocabulary for future review.\n\n3, You can manage your vocabulary under Saved-Vocabulary tab, and delete any term or all terms  you donnot need anymore.\n "</string>
    <string name="dialog_button_ok">Dismiss</string>
    <string name="question_title">Question:</string>
    <string name="question_body">Do you want to delete this term:  </string>
    <string name="dialog_button_no">No</string>
    <string name="dialog_button_yes">Yes</string>
    <string name="snackbar_message">You deleted term: </string>
    <string name="undo_button">UNDO</string>
    <string name="save_successful">Vocabulary saved successfully.</string>
    <string name="save_unsuccessful">Vocabulary already exists.</string>
    <string name="delete_all_title">Empty the whole vocabulary.</string>
    <string name="delete_all_body">Are you sure you want to empty the vocabulary?</string>
    <string name="delete_all_after">The whole vocabulary is now empty.</string>
    <string name="home_icon">Exit the app</string>
    <string name="home_id">New Search</string>


    <!-- Sunrise & Sunset -->
    <!-- SunHome.java -->
    <string name="sunhome_toast_enter_lat_long">Please enter latitude and longitude</string>
    <string name="sunhome_toast_location_added">Location added to favourites</string>
    <string name="sunhome_toast_error_adding_location">Location not added to favourites</string>
    <string name="sunhome_toast_lookup_location_first">Please lookup a location first</string>
    <string name="sunhome_toast_error_occured">Error occurred: </string>
    <string name="sunhome_input_time_format">hh:mm:ss a</string>
    <string name="sunhome_output_time_format">hh:mm:ss a</string>
    <string name="sunhome_toast_error_fetching_data">Error occurred while fetching data</string>
    <string name="sunhome_date_format">yyyy-MM-dd</string>
    <string name="sunhome_date" translatable="false">2024-04-01</string>
    <!-- SunFav.java -->
    <string name="sunhome_menutitle">SunCycle</string>
    <string name="sunfav_delete">Delete Favourite Location</string>
    <string name="sunfav_deleteconfirmation">Are you sure you want to delete this location?</string>
    <string name="sunfav_deleteyes">Yes</string>
    <string name="sunfav_deleteno">No</string>
    <string name="sunfav_deleteundo">Undo</string>
    <string name="sunfav_deleted">Location deleted</string>
    <string name="sunfav_latformat">Lat: %1$f</string>
    <string name="sunfav_lngformat">Lng: %1$f</string>
    <!-- SunMenuHandler-->
    <string name="sunmenu_about">About</string>
    <string name="sunmenu_about_message">
    Instructions for using the interface:\n\n
    1. Enter the latitude and longitude of the desired location.\n\n
    2. Click the Search button to retrieve the sunrise and sunset times.\n\n
    3. Click the Add button to save the location to your favourites.\n\n
    4. Use the menu options to navigate between screens.\n
    </string>
    <string name="sunmenu_message_ok_button">OK</string>
    <!-- Sun_Home.xml-->
    <string name="sunhome_latitude_label">Lat:</string>
    <string name="sunhome_longitude_label">Lng:</string>
    <string name="sunhome_add">Add</string>
    <string name="sunhome_search_hint_lat">  Latitude</string>
    <string name="sunhome_search_hint_lng">  Longitude</string>
    <string name="sunhome_search">Search</string>
    <string name="sunhome_favourites">Favourites</string>
    <string name="sunhome_sunrise_label">SUNRISE</string>
    <string name="sunhome_sunset_label">SUNSET</string>
    <string name="sunhome_sunrise_time">sunrise time</string>
    <string name="sunhome_sunset_time">sunset time</string>
    <string name="sunhome_latitude">latitude</string>
    <string name="sunhome_longitude">sunset time</string>
    <!-- Sun_Fav.xml-->
    <string name="sunfav_goback">Go Back</string>
    <!-- Sun_menu.xml-->
    <string name="sunmenu_icon_home">Home</string>
    <string name="sunmenu_icon_about">About</string>
    <!-- SunHomeTest.java-->
    <string name="suntest_date" translatable="false">2024-06-08</string>
    <string name="exit_message">Do you want to exit the APP and return to the main API entrance?</string>


    <!-- wenxinAPI Section   -->
    <string name="recipe_hint">Enter the name of recipe</string>
    <string name="search_recipe_button">Search</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="recipe_ID">Recipe ID</string>
    <string name="recipe_summary">Recipe Summary</string>
    <string name="recipe_source_URL">Recipe URL</string>
    <string name="recipe_save">Save</string>
    <string name="recipe_remove">Remove</string>
    <string name="saved_list">Saved Recipes</string>
    <string name="recipe_help">Help</string>
    <string name="recipe_search">Search</string>
    <string name="search_recipe_title">Search Recipe</string>
    <string name="home">Home</string>
    <string name="text_id">ID:</string>
    <string name="text_title">Title:</string>
    <string name="recipe_deleted_prompt">Recipe deleted</string>
    <string name="error">Error: </string>
    <string name="error_parsing">Error parsing recipes: </string>
    <string name="recipe_saved">Recipe saved</string>
    <string name="no_recipe_prompt">There is no recipe saved!</string>
    <string name="recipe_help_info">
    Instructions for using the interface:\n\n
    1. Enter the name of the recipe you would like to search.\n\n
    2. Click the Search button to see possible result.\n\n
    3. Click the save button to save the recipe.\n\n
    4. Use the menu options to navigate between screens.\n
    </string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
    volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
    dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
    litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
    diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
    ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
    Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
    egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
    neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
    fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
    molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
    bibendum, vel congue leo egestas.\n\n
    Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
    amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
    molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
    interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
    lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
    in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
    est.\n\n
    Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
    Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
    non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
    eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
    quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
    ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
    placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
    convallis.\n\n
    Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
    malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
    gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
    libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
    sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
    libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
    vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.</string>
    <!-- Song Searchs-->
    <string name="song_details_title">Song Details</string>

    <!-- Messages -->
    <string name="song_saved">Song saved successfully</string>
    <string name="song_deleted_prompt">Song deleted</string>
    <string name="search_songs">Search Song </string>

    <!-- Help Information -->
    <string name="song_help_info">This is the help information for the Song Details activity.</string>
    <string name="song_title">song title\n</string>
    <string name="song_album">song titlr\n</string>
    <string name="saved_songs">song\n</string>
    <string name="no_saved_songs_prompt">there are no saved songs\n</string>
    <string name="search_artists">search artist\n</string>
    <string name="search">Search</string>
    <string name="search_songs_ht">Search Songs</string>
    <string name="save">Save</string>
    <string name="duration">Duration</string>
    <string name="album">Album</string>
    <string name="artist">Artist</string>
    <string name="title">Title</string>
    <string name="song_artist">Song Artist</string>
    <string name="song_album1">Song Album</string>
    <string name="song_title1">Song Title</string>
    <string name="help_dialog_message">Welcome to the Saved Songs interface!\n\nThis interface allows you to view and manage your saved songs.\n\nHere\'s how to use it:\n\n- Saved Songs List: You can view your saved songs listed in the main area of the screen. Each song is displayed with its title, artist, and album.\n\n- Deleting Songs: To delete a song from your saved list, simply tap on the \'Delete\' button next to the song you want to remove.\n\n- Navigation: You can navigate back to the Deezer Song Search interface by selecting the \'Home\' button in the toolbar.\n\n- Help: If you need assistance or have any questions, you can always access this Help dialog by selecting the \'Help\' option in the toolbar.\n\nThank you for using our app! Enjoy exploring your saved songs collection.</string>
    <string name="song">song</string>
    <string name="Saved_Songs">Saved Songs</string>
    <string name="Home">home\n</string>
    <string name="Help">help\n</string>
    <string name="Song_Title">song title\n</string>
    <string name="Song_Album">song album\n</string>
    <string name="Deezer_Song_Search">deezer song search</string>
    <string name="Delete_song">delete song</string>
    <string name="Failed_to_save_song">failed to save song\n</string>
    <string name="song_saved_succesfully">song saved succesfully</string>
    <string name="OK">ok</string>
    <string name="Instructions_for_how_to_use">Instructions for how to use</string>
    <string name="Instructions_for_how_to_use_the_interface">Instructions for how to use the interface</string>
    <string name="deezer_song_db">deezer song db</string>


</resources>