...

    <item
        android:id="@+id/home_id"
        android:title="@string/home_id" />

    <item
        android:id="@+id/second_id"
        android:title="@string/second" />

    <item
        android:id="@+id/third_id"
        android:title="@string/third" />

</menu>
