...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/editText"
        android:layout_width="182dp"
        android:layout_height="67dp"
        android:layout_marginBottom="64dp"
        android:ems="10"
        android:hint="@string/hint"
        android:inputType="text"
...
        android:textColor="#381478"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wordTextView"
        app:layout_constraintVertical_bias="0.115"
        app:layout_constraintWidth_percent="0.9" />

    <TextView
        android:id="@+id/wordTextView"
        android:layout_width="wrap_content"
...
